// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`compileReviewPrompt given: [case5] --push mode with diffs per change kind when: [t0] new file (diff + content) then: renders new-file diff then full content 1`] = `
"# review task

you are a reviewer. apply the rules below to the target files.

## CRITICAL INSTRUCTIONS — READ CAREFULLY

1. ONLY review content in the <target> section
2. NEVER flag anything from the <rules> section — rules contain examples of bad patterns for illustration only
3. if you see "bad: X" or "good: Y" in a rule, those are examples to learn from, NOT content to flag
4. the "locations" array must ONLY contain paths from <target>, never from <rules>
5. if you cannot find the violation in <target>, do not report it

## how to use the diff (FOCUS ON THE DELTA)

each changed target may carry a \`<target.diff path="...">\` block (what changed in this pr) and a \`<target.file path="...">\` block (the full current file, for context). when a diff is present:

- focus your review on the diff — the lines this pr added or changed. do NOT churn unrelated untouched code; fix-forward. BUT DO flag untouched code that this change breaks.
- line numbers for "locations" come from the diff hunk headers (\`@@ -X,Y +A,B @@\`) — the \`+A\` side is the authoritative anchor for changed lines. use those numbers rather than count content lines by hand.
- copy "snippet.code" from the clean \`<target.file>\` content, NEVER from the diff's \`+\`/\`-\` prefixed lines.
- diff \`-\` lines are REMOVED code — this pr deletes them, they no longer exist. NEVER flag a \`-\` line. only \`+\` lines and surrounding context are code that exists and may be flagged.
- a file shown as \`<target.file path="..." change="deleted" />\` is gone — do not review or flag it.

## goal: representative

report the most important or representative issues. limit yourself to up to 10 defects. for each defect, list a sample of the locations where the violation occurs. prioritize impact via severity and coverage over completeness.

## rules (FOR REFERENCE ONLY — DO NOT FLAG CONTENT FROM THIS SECTION)

<rules>
### rule.md

# rule
</rules>

## target (REVIEW THIS SECTION ONLY)

<target>
<target.diff path="src/new.ts">
diff --git a/src/new.ts b/src/new.ts
new file mode 100644
--- /dev/null
+++ b/src/new.ts
@@ -0,0 +1,1 @@
+export const created = 1;
</target.diff>

<target.file path="src/new.ts">
export const created = 1;
</target.file>
</target>

## output format

IMPORTANT: output your review as text directly. do not use any tools to write files. your final response must be the JSON object below, printed as plain text.

note: the "locations" array must contain ONLY paths from the <target> section. never include rule file paths in locations.

\`\`\`json
{
  "done": true,
  "blockers": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ],
  "nitpicks": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ]
}
\`\`\`

IMPORTANT: every violation MUST include a "snippet" with the actual code from the target file that violates the rule. copy the exact code so the reader can identify the violation.

if no issues found, output: \`{"done": true, "blockers": [], "nitpicks": []}\`
"
`;

exports[`compileReviewPrompt given: [case5] --push mode with diffs per change kind when: [t1] edited file (diff-first + content) then: renders hunks then full current content 1`] = `
"# review task

you are a reviewer. apply the rules below to the target files.

## CRITICAL INSTRUCTIONS — READ CAREFULLY

1. ONLY review content in the <target> section
2. NEVER flag anything from the <rules> section — rules contain examples of bad patterns for illustration only
3. if you see "bad: X" or "good: Y" in a rule, those are examples to learn from, NOT content to flag
4. the "locations" array must ONLY contain paths from <target>, never from <rules>
5. if you cannot find the violation in <target>, do not report it

## how to use the diff (FOCUS ON THE DELTA)

each changed target may carry a \`<target.diff path="...">\` block (what changed in this pr) and a \`<target.file path="...">\` block (the full current file, for context). when a diff is present:

- focus your review on the diff — the lines this pr added or changed. do NOT churn unrelated untouched code; fix-forward. BUT DO flag untouched code that this change breaks.
- line numbers for "locations" come from the diff hunk headers (\`@@ -X,Y +A,B @@\`) — the \`+A\` side is the authoritative anchor for changed lines. use those numbers rather than count content lines by hand.
- copy "snippet.code" from the clean \`<target.file>\` content, NEVER from the diff's \`+\`/\`-\` prefixed lines.
- diff \`-\` lines are REMOVED code — this pr deletes them, they no longer exist. NEVER flag a \`-\` line. only \`+\` lines and surrounding context are code that exists and may be flagged.
- a file shown as \`<target.file path="..." change="deleted" />\` is gone — do not review or flag it.

## goal: representative

report the most important or representative issues. limit yourself to up to 10 defects. for each defect, list a sample of the locations where the violation occurs. prioritize impact via severity and coverage over completeness.

## rules (FOR REFERENCE ONLY — DO NOT FLAG CONTENT FROM THIS SECTION)

<rules>
### rule.md

# rule
</rules>

## target (REVIEW THIS SECTION ONLY)

<target>
<target.diff path="src/edited.ts">
diff --git a/src/edited.ts b/src/edited.ts
--- a/src/edited.ts
+++ b/src/edited.ts
@@ -1,1 +1,2 @@
-export const value = 1;
+export const value = 2;
+// context line
</target.diff>

<target.file path="src/edited.ts">
export const value = 2;
// context line
</target.file>
</target>

## output format

IMPORTANT: output your review as text directly. do not use any tools to write files. your final response must be the JSON object below, printed as plain text.

note: the "locations" array must contain ONLY paths from the <target> section. never include rule file paths in locations.

\`\`\`json
{
  "done": true,
  "blockers": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ],
  "nitpicks": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ]
}
\`\`\`

IMPORTANT: every violation MUST include a "snippet" with the actual code from the target file that violates the rule. copy the exact code so the reader can identify the violation.

if no issues found, output: \`{"done": true, "blockers": [], "nitpicks": []}\`
"
`;

exports[`compileReviewPrompt given: [case5] --push mode with diffs per change kind when: [t2] deleted file (marker only) then: renders one-line marker, no diff, no content 1`] = `
"# review task

you are a reviewer. apply the rules below to the target files.

## CRITICAL INSTRUCTIONS — READ CAREFULLY

1. ONLY review content in the <target> section
2. NEVER flag anything from the <rules> section — rules contain examples of bad patterns for illustration only
3. if you see "bad: X" or "good: Y" in a rule, those are examples to learn from, NOT content to flag
4. the "locations" array must ONLY contain paths from <target>, never from <rules>
5. if you cannot find the violation in <target>, do not report it

## how to use the diff (FOCUS ON THE DELTA)

each changed target may carry a \`<target.diff path="...">\` block (what changed in this pr) and a \`<target.file path="...">\` block (the full current file, for context). when a diff is present:

- focus your review on the diff — the lines this pr added or changed. do NOT churn unrelated untouched code; fix-forward. BUT DO flag untouched code that this change breaks.
- line numbers for "locations" come from the diff hunk headers (\`@@ -X,Y +A,B @@\`) — the \`+A\` side is the authoritative anchor for changed lines. use those numbers rather than count content lines by hand.
- copy "snippet.code" from the clean \`<target.file>\` content, NEVER from the diff's \`+\`/\`-\` prefixed lines.
- diff \`-\` lines are REMOVED code — this pr deletes them, they no longer exist. NEVER flag a \`-\` line. only \`+\` lines and surrounding context are code that exists and may be flagged.
- a file shown as \`<target.file path="..." change="deleted" />\` is gone — do not review or flag it.

## goal: representative

report the most important or representative issues. limit yourself to up to 10 defects. for each defect, list a sample of the locations where the violation occurs. prioritize impact via severity and coverage over completeness.

## rules (FOR REFERENCE ONLY — DO NOT FLAG CONTENT FROM THIS SECTION)

<rules>
### rule.md

# rule
</rules>

## target (REVIEW THIS SECTION ONLY)

<target>
<target.file path="src/gone.ts" change="deleted" />
</target>

## output format

IMPORTANT: output your review as text directly. do not use any tools to write files. your final response must be the JSON object below, printed as plain text.

note: the "locations" array must contain ONLY paths from the <target> section. never include rule file paths in locations.

\`\`\`json
{
  "done": true,
  "blockers": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ],
  "nitpicks": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ]
}
\`\`\`

IMPORTANT: every violation MUST include a "snippet" with the actual code from the target file that violates the rule. copy the exact code so the reader can identify the violation.

if no issues found, output: \`{"done": true, "blockers": [], "nitpicks": []}\`
"
`;

exports[`compileReviewPrompt given: [case5] --push mode with diffs per change kind when: [t3] unchanged path-only file (content only, no diff) then: renders content only, no diff section 1`] = `
"# review task

you are a reviewer. apply the rules below to the target files.

## CRITICAL INSTRUCTIONS — READ CAREFULLY

1. ONLY review content in the <target> section
2. NEVER flag anything from the <rules> section — rules contain examples of bad patterns for illustration only
3. if you see "bad: X" or "good: Y" in a rule, those are examples to learn from, NOT content to flag
4. the "locations" array must ONLY contain paths from <target>, never from <rules>
5. if you cannot find the violation in <target>, do not report it

## how to use the diff (FOCUS ON THE DELTA)

each changed target may carry a \`<target.diff path="...">\` block (what changed in this pr) and a \`<target.file path="...">\` block (the full current file, for context). when a diff is present:

- focus your review on the diff — the lines this pr added or changed. do NOT churn unrelated untouched code; fix-forward. BUT DO flag untouched code that this change breaks.
- line numbers for "locations" come from the diff hunk headers (\`@@ -X,Y +A,B @@\`) — the \`+A\` side is the authoritative anchor for changed lines. use those numbers rather than count content lines by hand.
- copy "snippet.code" from the clean \`<target.file>\` content, NEVER from the diff's \`+\`/\`-\` prefixed lines.
- diff \`-\` lines are REMOVED code — this pr deletes them, they no longer exist. NEVER flag a \`-\` line. only \`+\` lines and surrounding context are code that exists and may be flagged.
- a file shown as \`<target.file path="..." change="deleted" />\` is gone — do not review or flag it.

## goal: representative

report the most important or representative issues. limit yourself to up to 10 defects. for each defect, list a sample of the locations where the violation occurs. prioritize impact via severity and coverage over completeness.

## rules (FOR REFERENCE ONLY — DO NOT FLAG CONTENT FROM THIS SECTION)

<rules>
### rule.md

# rule
</rules>

## target (REVIEW THIS SECTION ONLY)

<target>
<target.file path="src/unchanged.ts">
export const same = 1;
</target.file>
</target>

## output format

IMPORTANT: output your review as text directly. do not use any tools to write files. your final response must be the JSON object below, printed as plain text.

note: the "locations" array must contain ONLY paths from the <target> section. never include rule file paths in locations.

\`\`\`json
{
  "done": true,
  "blockers": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ],
  "nitpicks": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ]
}
\`\`\`

IMPORTANT: every violation MUST include a "snippet" with the actual code from the target file that violates the rule. copy the exact code so the reader can identify the violation.

if no issues found, output: \`{"done": true, "blockers": [], "nitpicks": []}\`
"
`;

exports[`compileReviewPrompt given: [case5] --push mode with diffs per change kind when: [t4] binary file changed then: passes through Binary files differ, no garbage 1`] = `
"# review task

you are a reviewer. apply the rules below to the target files.

## CRITICAL INSTRUCTIONS — READ CAREFULLY

1. ONLY review content in the <target> section
2. NEVER flag anything from the <rules> section — rules contain examples of bad patterns for illustration only
3. if you see "bad: X" or "good: Y" in a rule, those are examples to learn from, NOT content to flag
4. the "locations" array must ONLY contain paths from <target>, never from <rules>
5. if you cannot find the violation in <target>, do not report it

## how to use the diff (FOCUS ON THE DELTA)

each changed target may carry a \`<target.diff path="...">\` block (what changed in this pr) and a \`<target.file path="...">\` block (the full current file, for context). when a diff is present:

- focus your review on the diff — the lines this pr added or changed. do NOT churn unrelated untouched code; fix-forward. BUT DO flag untouched code that this change breaks.
- line numbers for "locations" come from the diff hunk headers (\`@@ -X,Y +A,B @@\`) — the \`+A\` side is the authoritative anchor for changed lines. use those numbers rather than count content lines by hand.
- copy "snippet.code" from the clean \`<target.file>\` content, NEVER from the diff's \`+\`/\`-\` prefixed lines.
- diff \`-\` lines are REMOVED code — this pr deletes them, they no longer exist. NEVER flag a \`-\` line. only \`+\` lines and surrounding context are code that exists and may be flagged.
- a file shown as \`<target.file path="..." change="deleted" />\` is gone — do not review or flag it.

## goal: representative

report the most important or representative issues. limit yourself to up to 10 defects. for each defect, list a sample of the locations where the violation occurs. prioritize impact via severity and coverage over completeness.

## rules (FOR REFERENCE ONLY — DO NOT FLAG CONTENT FROM THIS SECTION)

<rules>
### rule.md

# rule
</rules>

## target (REVIEW THIS SECTION ONLY)

<target>
<target.diff path="assets/logo.png">
diff --git a/assets/logo.png b/assets/logo.png
Binary files a/assets/logo.png and b/assets/logo.png differ
</target.diff>

<target.file path="assets/logo.png">
(binary content placeholder)
</target.file>
</target>

## output format

IMPORTANT: output your review as text directly. do not use any tools to write files. your final response must be the JSON object below, printed as plain text.

note: the "locations" array must contain ONLY paths from the <target> section. never include rule file paths in locations.

\`\`\`json
{
  "done": true,
  "blockers": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ],
  "nitpicks": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ]
}
\`\`\`

IMPORTANT: every violation MUST include a "snippet" with the actual code from the target file that violates the rule. copy the exact code so the reader can identify the violation.

if no issues found, output: \`{"done": true, "blockers": [], "nitpicks": []}\`
"
`;

exports[`compileReviewPrompt given: [case5] --push mode with diffs per change kind when: [t5] since-staged edited file then: renders plain diff + content with no extra note attribute 1`] = `
"# review task

you are a reviewer. apply the rules below to the target files.

## CRITICAL INSTRUCTIONS — READ CAREFULLY

1. ONLY review content in the <target> section
2. NEVER flag anything from the <rules> section — rules contain examples of bad patterns for illustration only
3. if you see "bad: X" or "good: Y" in a rule, those are examples to learn from, NOT content to flag
4. the "locations" array must ONLY contain paths from <target>, never from <rules>
5. if you cannot find the violation in <target>, do not report it

## how to use the diff (FOCUS ON THE DELTA)

each changed target may carry a \`<target.diff path="...">\` block (what changed in this pr) and a \`<target.file path="...">\` block (the full current file, for context). when a diff is present:

- focus your review on the diff — the lines this pr added or changed. do NOT churn unrelated untouched code; fix-forward. BUT DO flag untouched code that this change breaks.
- line numbers for "locations" come from the diff hunk headers (\`@@ -X,Y +A,B @@\`) — the \`+A\` side is the authoritative anchor for changed lines. use those numbers rather than count content lines by hand.
- copy "snippet.code" from the clean \`<target.file>\` content, NEVER from the diff's \`+\`/\`-\` prefixed lines.
- diff \`-\` lines are REMOVED code — this pr deletes them, they no longer exist. NEVER flag a \`-\` line. only \`+\` lines and surrounding context are code that exists and may be flagged.
- a file shown as \`<target.file path="..." change="deleted" />\` is gone — do not review or flag it.

## goal: representative

report the most important or representative issues. limit yourself to up to 10 defects. for each defect, list a sample of the locations where the violation occurs. prioritize impact via severity and coverage over completeness.

## rules (FOR REFERENCE ONLY — DO NOT FLAG CONTENT FROM THIS SECTION)

<rules>
### rule.md

# rule
</rules>

## target (REVIEW THIS SECTION ONLY)

<target>
<target.diff path="src/staged.ts">
@@ -1 +1 @@
-export const value = 1;
+export const value = 2;
</target.diff>

<target.file path="src/staged.ts">
export const value = 2;
</target.file>
</target>

## output format

IMPORTANT: output your review as text directly. do not use any tools to write files. your final response must be the JSON object below, printed as plain text.

note: the "locations" array must contain ONLY paths from the <target> section. never include rule file paths in locations.

\`\`\`json
{
  "done": true,
  "blockers": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ],
  "nitpicks": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ]
}
\`\`\`

IMPORTANT: every violation MUST include a "snippet" with the actual code from the target file that violates the rule. copy the exact code so the reader can identify the violation.

if no issues found, output: \`{"done": true, "blockers": [], "nitpicks": []}\`
"
`;

exports[`compileReviewPrompt given: [case6] --pull mode with diff range when: [t0] diffRange is provided then: injects neither diff nor content, mentions the range 1`] = `
"# review task

you are a reviewer. apply the rules below to the target files.

## CRITICAL INSTRUCTIONS — READ CAREFULLY

1. ONLY review content in the <target> section
2. NEVER flag anything from the <rules> section — rules contain examples of bad patterns for illustration only
3. if you see "bad: X" or "good: Y" in a rule, those are examples to learn from, NOT content to flag
4. the "locations" array must ONLY contain paths from <target>, never from <rules>
5. if you cannot find the violation in <target>, do not report it

## how to use the diff (FOCUS ON THE DELTA)

each changed target may carry a \`<target.diff path="...">\` block (what changed in this pr) and a \`<target.file path="...">\` block (the full current file, for context). when a diff is present:

- focus your review on the diff — the lines this pr added or changed. do NOT churn unrelated untouched code; fix-forward. BUT DO flag untouched code that this change breaks.
- line numbers for "locations" come from the diff hunk headers (\`@@ -X,Y +A,B @@\`) — the \`+A\` side is the authoritative anchor for changed lines. use those numbers rather than count content lines by hand.
- copy "snippet.code" from the clean \`<target.file>\` content, NEVER from the diff's \`+\`/\`-\` prefixed lines.
- diff \`-\` lines are REMOVED code — this pr deletes them, they no longer exist. NEVER flag a \`-\` line. only \`+\` lines and surrounding context are code that exists and may be flagged.
- a file shown as \`<target.file path="..." change="deleted" />\` is gone — do not review or flag it.

## goal: representative

report the most important or representative issues. limit yourself to up to 10 defects. for each defect, list a sample of the locations where the violation occurs. prioritize impact via severity and coverage over completeness.

## rules (FOR REFERENCE ONLY — DO NOT FLAG CONTENT FROM THIS SECTION)

<rules>
### rule.md

# rule
</rules>

## target (REVIEW THIS SECTION ONLY)

<target>
the following files are in scope for review. please open and read them as needed:

- src/edited.ts

the diff range for "this pr" is \`since-main\` — run \`git diff\` against that base to see what changed.
</target>

## output format

IMPORTANT: output your review as text directly. do not use any tools to write files. your final response must be the JSON object below, printed as plain text.

note: the "locations" array must contain ONLY paths from the <target> section. never include rule file paths in locations.

\`\`\`json
{
  "done": true,
  "blockers": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ],
  "nitpicks": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ]
}
\`\`\`

IMPORTANT: every violation MUST include a "snippet" with the actual code from the target file that violates the rule. copy the exact code so the reader can identify the violation.

if no issues found, output: \`{"done": true, "blockers": [], "nitpicks": []}\`
"
`;

exports[`compileReviewPrompt given: [case8] combination — new + edited + deleted + unchanged in one prompt when: [t0] all four change kinds are present then: diff+content for new/edited, content-only for unchanged, marker for deleted 1`] = `
"# review task

you are a reviewer. apply the rules below to the target files.

## CRITICAL INSTRUCTIONS — READ CAREFULLY

1. ONLY review content in the <target> section
2. NEVER flag anything from the <rules> section — rules contain examples of bad patterns for illustration only
3. if you see "bad: X" or "good: Y" in a rule, those are examples to learn from, NOT content to flag
4. the "locations" array must ONLY contain paths from <target>, never from <rules>
5. if you cannot find the violation in <target>, do not report it

## how to use the diff (FOCUS ON THE DELTA)

each changed target may carry a \`<target.diff path="...">\` block (what changed in this pr) and a \`<target.file path="...">\` block (the full current file, for context). when a diff is present:

- focus your review on the diff — the lines this pr added or changed. do NOT churn unrelated untouched code; fix-forward. BUT DO flag untouched code that this change breaks.
- line numbers for "locations" come from the diff hunk headers (\`@@ -X,Y +A,B @@\`) — the \`+A\` side is the authoritative anchor for changed lines. use those numbers rather than count content lines by hand.
- copy "snippet.code" from the clean \`<target.file>\` content, NEVER from the diff's \`+\`/\`-\` prefixed lines.
- diff \`-\` lines are REMOVED code — this pr deletes them, they no longer exist. NEVER flag a \`-\` line. only \`+\` lines and surrounding context are code that exists and may be flagged.
- a file shown as \`<target.file path="..." change="deleted" />\` is gone — do not review or flag it.

## goal: exhaustive

report all the issues found, exhaustively. do not limit the number of issues. every violation of every rule should be documented. if there are many similar issues, collect their locations under one violation. be thorough and comprehensive.

## rules (FOR REFERENCE ONLY — DO NOT FLAG CONTENT FROM THIS SECTION)

<rules>
### rules/rule.no-any.md

# rule: no-any
forbid the any type
</rules>

## target (REVIEW THIS SECTION ONLY)

<target>
<target.diff path="src/added.ts">
diff --git a/src/added.ts b/src/added.ts
new file mode 100644
--- /dev/null
+++ b/src/added.ts
@@ -0,0 +1,1 @@
+export const added = (n: number): number => n + 1;
</target.diff>

<target.file path="src/added.ts">
export const added = (n: number): number => n + 1;
</target.file>

---

<target.diff path="src/edited.ts">
diff --git a/src/edited.ts b/src/edited.ts
--- a/src/edited.ts
+++ b/src/edited.ts
@@ -1,1 +1,1 @@
-export const edited = (n: number): number => n;
+export const edited = (n: number): number => n * 2;
</target.diff>

<target.file path="src/edited.ts">
export const edited = (n: number): number => n * 2;
</target.file>

---

<target.file path="src/gone.ts" change="deleted" />

---

<target.file path="src/unchanged.ts">
export const unchanged = 1;
</target.file>
</target>

## output format

IMPORTANT: output your review as text directly. do not use any tools to write files. your final response must be the JSON object below, printed as plain text.

note: the "locations" array must contain ONLY paths from the <target> section. never include rule file paths in locations.

\`\`\`json
{
  "done": true,
  "blockers": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ],
  "nitpicks": [
    {
      "rule": "path/to/rule.md (which rule was violated)",
      "title": "short title for the issue",
      "description": "detailed multiline explanation of the issue.\\ninclude context about why this violates the rule.\\nbe specific about what needs to change.",
      "locations": ["path/to/target-file.ts:42 (only target files, never rule files)"],
      "snippet": {
        "lang": "ts",
        "code": "// the exact code from the target file that violates the rule\\nconst x = badPattern();"
      }
    }
  ]
}
\`\`\`

IMPORTANT: every violation MUST include a "snippet" with the actual code from the target file that violates the rule. copy the exact code so the reader can identify the violation.

if no issues found, output: \`{"done": true, "blockers": [], "nitpicks": []}\`
"
`;
